--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div id="footer" class="flex align-center bg-white">
           <div class="container-content">
             <input type="text" id="write-task" placeholder="Digite sua tarefa">
-            <button class="bg-pink" id="add-task"><img  src="/assets/icons8-mais.svg" alt=""></button>
+            <button class="bg-pink" id="add-task"><img  src="./assets/icons8-mais.svg" alt=""></button>
           </div>
         </div>
       </div>
