--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
     </div>
     <!-- To-do list -->
 
+    <script src="https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js"></script>
+    
     <script src="./logic/app.js"></script>
   </body>
 </html>
